--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,16 +1,19 @@
 <p id="notice"><%= notice %></p>
 
+ <div class="row">
+  <div class="col-md-3">
+      <%= link_to new_task_path, remote: true do %>
+          <button class="btn btn-default"><span class="glyphicon glyphicon-plus"></span> Add Task </button>
+      <% end %>
 
-
-<br>
-
-<%= link_to 'New Task', new_task_path, remote: true %>
-
-<div id="task-form" style="display:none;"></div>
-
-<h2>Tasks</h2>
-<ul>
-  <div id="tasks">    
-      <%= render @tasks %>
+      <div id="task-form" style="display:none;"></div> 
   </div>
-</ul>
+  <div class="col-md-8"> 
+    <h2>Nathan's Tasks</h2>
+    <div id="tasks">
+      <div class="row">
+        <%= render @tasks %>
+      </div>
+    </div>
+  </div>
+</div>
